# surface-water-network

./: .buildinfo  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  20210528_swn_wairau.ipynb  CITATION.cff  LICENSE  README.md  changelog.html  compat.html  file.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  quickstart.html  reference.html  search.html  searchindex.js  setup.cfg  setup.py  spatial.html  swn.html  swn.py  swnmf6.html  swnmodflow.html
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  release.yml  tests.yml
_sources/: changelog.rst.txt  file.rst.txt  quickstart.rst.txt  reference.rst.txt  spatial.rst.txt  swn.rst.txt  swnmf6.rst.txt  swnmodflow.rst.txt
_sources/ref/: swn.SurfaceWaterNetwork.accumulate_values.rst.txt  swn.SurfaceWaterNetwork.adjust_elevation_profile.rst.txt  swn.SurfaceWaterNetwork.aggregate.rst.txt  swn.SurfaceWaterNetwork.catchments.rst.txt  swn.SurfaceWaterNetwork.coarsen.rst.txt  swn.SurfaceWaterNetwork.diversions.rst.txt  swn.SurfaceWaterNetwork.estimate_width.rst.txt  swn.SurfaceWaterNetwork.evaluate_upstream_area.rst.txt  swn.SurfaceWaterNetwork.evaluate_upstream_length.rst.txt  swn.SurfaceWaterNetwork.from_lines.rst.txt  swn.SurfaceWaterNetwork.from_pickle.rst.txt  swn.SurfaceWaterNetwork.from_segnums.rst.txt  swn.SurfaceWaterNetwork.gather_segnums.rst.txt  swn.SurfaceWaterNetwork.has_z.rst.txt  swn.SurfaceWaterNetwork.headwater.rst.txt  swn.SurfaceWaterNetwork.locate_geoms.rst.txt  swn.SurfaceWaterNetwork.outlets.rst.txt  swn.SurfaceWaterNetwork.pair_segments_frame.rst.txt  swn.SurfaceWaterNetwork.plot.rst.txt  swn.SurfaceWaterNetwork.query.rst.txt  swn.SurfaceWaterNetwork.remove.rst.txt  swn.SurfaceWaterNetwork.route_segnums.rst.txt  swn.SurfaceWaterNetwork.rst.txt  swn.SurfaceWaterNetwork.segments.rst.txt  swn.SurfaceWaterNetwork.segments_series.rst.txt  swn.SurfaceWaterNetwork.set_diversions.rst.txt  swn.SurfaceWaterNetwork.to_pickle.rst.txt  swn.SurfaceWaterNetwork.to_segnums.rst.txt  swn.compat.dataframe_str_na.rst.txt  swn.compat.sjoin_idx_names.rst.txt  swn.file.gdf_to_shapefile.rst.txt  swn.file.read_formatted_frame.rst.txt  swn.file.topnet2ts.rst.txt  swn.file.write_formatted_frame.rst.txt  swn.modflow.SwnMf6.connectiondata_series.rst.txt  swn.modflow.SwnMf6.default_packagedata.rst.txt  swn.modflow.SwnMf6.diversions.rst.txt  swn.modflow.SwnMf6.diversions_frame.rst.txt  swn.modflow.SwnMf6.flopy_connectiondata.rst.txt  swn.modflow.SwnMf6.flopy_diversions.rst.txt  (+51 more)
_static/: documentation_options.js
ci/: do_install.sh  get-usgs-executables.py  requirements.txt
ci/cmake/: WriteOpenspecInc.cmake
ci/mf2005/: CMakeLists.txt  install.sh
ci/mfnwt/: CMakeLists.txt  install.sh
docs/: requirements.txt
docs/source/: changelog.rst  compat.rst  conf.py  file.rst  index.rst  quickstart.rst  reference.rst  spatial.rst  swn.rst  swnmf6.rst  swnmodflow.rst
ref/: swn.SurfaceWaterNetwork.accumulate_values.html  swn.SurfaceWaterNetwork.adjust_elevation_profile.html  swn.SurfaceWaterNetwork.aggregate.html  swn.SurfaceWaterNetwork.catchments.html  swn.SurfaceWaterNetwork.coarsen.html  swn.SurfaceWaterNetwork.diversions.html  swn.SurfaceWaterNetwork.estimate_width.html  swn.SurfaceWaterNetwork.evaluate_upstream_area.html  swn.SurfaceWaterNetwork.evaluate_upstream_length.html  swn.SurfaceWaterNetwork.from_lines.html  swn.SurfaceWaterNetwork.from_pickle.html  swn.SurfaceWaterNetwork.from_segnums.html  swn.SurfaceWaterNetwork.gather_segnums.html  swn.SurfaceWaterNetwork.has_z.html  swn.SurfaceWaterNetwork.headwater.html  swn.SurfaceWaterNetwork.html  swn.SurfaceWaterNetwork.locate_geoms.html  swn.SurfaceWaterNetwork.outlets.html  swn.SurfaceWaterNetwork.pair_segments_frame.html  swn.SurfaceWaterNetwork.plot.html  swn.SurfaceWaterNetwork.query.html  swn.SurfaceWaterNetwork.remove.html  swn.SurfaceWaterNetwork.route_segnums.html  swn.SurfaceWaterNetwork.segments.html  swn.SurfaceWaterNetwork.segments_series.html  swn.SurfaceWaterNetwork.set_diversions.html  swn.SurfaceWaterNetwork.to_pickle.html  swn.SurfaceWaterNetwork.to_segnums.html  swn.compat.dataframe_str_na.html  swn.compat.sjoin_idx_names.html  swn.file.gdf_to_shapefile.html  swn.file.read_formatted_frame.html  swn.file.topnet2ts.html  swn.file.write_formatted_frame.html  swn.modflow.SwnMf6.connectiondata_series.html  swn.modflow.SwnMf6.default_packagedata.html  swn.modflow.SwnMf6.diversions.html  swn.modflow.SwnMf6.diversions_frame.html  swn.modflow.SwnMf6.flopy_connectiondata.html  swn.modflow.SwnMf6.flopy_diversions.html  (+51 more)
src/swn/: __init__.py  compat.py  core.py  file.py  spatial.py  util.py
src/swn/modflow/: __init__.py  _base.py  _misc.py  _modelplot.py  _swnmf6.py  _swnmodflow.py
swn/: __init__.py  _version.py  base.py  compat.py  core.py  file.py  logger.py  modflow.py  spatial.py  util.py
swn/modflow/: __init__.py  _base.py  _legacy.py  _misc.py  _modelplot.py  _swnmf6.py  _swnmodflow.py
tests/: common.py  conftest.py  test_basic.py  test_compat.py  test_complex.py  test_file.py  test_flopy.py  test_modflow.py  test_modflow6.py  test_modflow_base.py  test_shp.py  test_spatial.py  test_util.py
tests/data/: Coastal_SW_abstraction.dbf  Coastal_SW_abstraction.prj  Coastal_SW_abstraction.shp  Coastal_SW_abstraction.shx  Coastal_points.dbf  Coastal_points.shp  Coastal_points.shx  DN2_Coastal_strahler1_vf.dbf  DN2_Coastal_strahler1_vf.prj  DN2_Coastal_strahler1_vf.sbn  DN2_Coastal_strahler1_vf.sbx  DN2_Coastal_strahler1_vf.shp  DN2_Coastal_strahler1_vf.shx  DN2_Coastal_strahler1z_stream_vf.dbf  DN2_Coastal_strahler1z_stream_vf.prj  DN2_Coastal_strahler1z_stream_vf.sbn  DN2_Coastal_strahler1z_stream_vf.sbx  DN2_Coastal_strahler1z_stream_vf.shp  DN2_Coastal_strahler1z_stream_vf.shx  h.bas  h.botm1.ref  h.botm2.ref  h.botm3.ref  h.dis  h.drn  h.ibound1.inf  h.ibound2.inf  h.ibound3.inf  h.nam  h.nwt  h.oc  h.rch  h.rech.ref  h.top.ref  h.upw  mf6h.nam  mf6h.npf  mf6h.oc  mfsim.nam  streamq_20170115_20170128_topnet_03046727_m3day.csv  (+1 more)
tests/data/mf6_coastal/: h.dis  h.drn  h.ic  h.ims  (+6 more)
