[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "surface-water-network"
dynamic = ["version"]
authors = [
    {name = "Mike Taves", email = "mwtoews@gmail.com"},
    {name = "Brioch Hemmings", email = "briochh@gmail.com"},
]
maintainers = [
    {name = "Mike Taves", email = "mwtoews@gmail.com"},
]
description = "Surface water network"
readme = "README.md"
keywords = ["surface water", "groundwater", "MODFLOW", "flopy"]
license = {text = "BSD 3-Clause"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Hydrology",
]
requires-python = ">=3.9"
dependencies = [
    "geopandas >=0.9",
    "packaging",
    "pandas >=1.2",
    "pyproj >=2.2",
    "rtree",
    "shapely",
]

[project.optional-dependencies]
dev = ["surface-water-network[doc,extra,test]"]
doc = [
    "ipython",
    "matplotlib",
    "numpydoc",
    "pydata-sphinx-theme",
    "sphinx <6",
    "sphinx-issues",
]
extra = [
    "flopy >=3.3.6",
    "matplotlib",
    "netcdf4",
]
test = [
    "pytest >=3.3",
    "pytest-cov",
    "pytest-xdist",
]

[project.urls]
Documentation = "https://mwtoews.github.io/surface-water-network/"
Source = "https://github.com/mwtoews/surface-water-network"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/swn/_version.py"

[tool.hatch.build.targets.sdist]
only-include = ["src", "tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/swn"]

[tool.pytest.ini_options]
minversion = "6.0"
doctest_optionflags = "NORMALIZE_WHITESPACE"
testpaths = ["tests"]
filterwarnings = [
    "ignore:.*distutils Version classes.*:DeprecationWarning",
    "ignore:.*More than 20 figures have been opened.*:RuntimeWarning",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "I",  # isort
    "NPY",  # NumPy-specific
]

[tool.codespell]
skip = "./docs/build,dist"
check-filenames = true
ignore-words-list = [
    "nam",
    "notin",
    "hax",
]
