[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "surface-water-network"
dynamic = ["version"]
authors = [
    {name = "Mike Taves", email = "mwtoews@gmail.com"},
    {name = "Brioch Hemmings", email = "briochh@gmail.com"},
]
maintainers = [
    {name = "Mike Taves", email = "mwtoews@gmail.com"},
]
description = "Surface water network"
readme = "README.md"
keywords = ["surface water", "groundwater", "MODFLOW", "flopy"]
license = {text = "BSD 3-Clause"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Hydrology",
]
requires-python = ">=3.10"
dependencies = [
    "geopandas",
    "packaging",
    "pandas",
    "pyproj",
    "rtree",
    "shapely",
]

[project.optional-dependencies]
optional = [
    "flopy",
    "matplotlib",
    "netcdf4",
]

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "tests"},
]
lint = [
    "ruff",
    "pre-commit",
]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
docs = [
    "ipython",
    "matplotlib",
    "numpydoc",
    "pydata-sphinx-theme",
    "sphinx<9",
    "sphinx-issues",
]

[project.urls]
Documentation = "https://mwtoews.github.io/surface-water-network/"
Source = "https://github.com/mwtoews/surface-water-network"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/swn/_version.py"

[tool.hatch.build.targets.sdist]
only-include = ["src", "tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/swn"]

[tool.pytest.ini_options]
doctest_optionflags = "NORMALIZE_WHITESPACE"
testpaths = ["tests"]
filterwarnings = [
    "ignore:.*distutils Version classes.*:DeprecationWarning",
    "ignore:.*More than 20 figures have been opened.*:RuntimeWarning",
]

[tool.ruff.lint]
select = [
    "D",    # pydocstyle
    "E",    # pycodestyle
    "F",    # Pyflakes
    "I",    # isort
    "NPY",  # NumPy-specific
    "RET",  # flake8-return
    "RUF",  # Ruff-specific rules
    "UP",   # pyupgrade
]
ignore = [
    "D205",  # 1 blank line required between summary line and description
    "D401",  # First line of docstring should be in imperative mood
    "RUF005",  # Consider iterable unpacking instead of concatenation
]

[tool.ruff.lint.per-file-ignores]
"./docs/source/conf.py" = ["D"]
"./src/swn/compat.py" = ["D103"]
"**/{tests}/*" = ["ANN", "D", "RET504"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.codespell]
skip = "./docs/build,dist"
check-filenames = true
ignore-words-list = [
    "nam",
    "notin",
    "hax",
]
