[metadata]
name = surface-water-network
version = attr: swn._version.version
description = Surface water network
long_description = file: README.md
long_description_content_type = text/markdown
author = Mike Taves
author_email = mwtoews@gmail.com
maintainer = Mike Taves
maintainer_email = mwtoews@gmail.com
license = BSD
license_files = LICENSE
platform = any
keywords = surface water, groundwater, MODFLOW, flopy
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Hydrology
url = https://github.com/mwtoews/surface-water-network
download_url = https://pypi.org/project/surface-water-network/
project_urls =
    Documentation = https://mwtoews.github.io/surface-water-network/
    Bug Tracker = https://github.com/mwtoews/surface-water-network/issues
    Source Code = https://github.com/mwtoews/surface-water-network

[options]
packages = find:
python_requires = >=3.6
install_requires =
    geopandas
    pyproj >= 2.2
    rtree
    shapely

[options.packages.find]
exclude =
    tests

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist
ignore =
    # https://flake8.pycqa.org/en/latest/user/error-codes.html
    # https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
    E126, # continuation line over-indented for hanging indent
    E226, # missing whitespace around arithmetic operator
    E241, # multiple spaces after ','
    W504  # line break after binary operator
statistics = True
